--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="card">
                         <img class="card-img-top" src="img/foto1.png" alt="Card image cap">
                         <div class="card-body">
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="card">
                         <img class="card-img-top" src="img/foto2.png" alt="Card image cap">
                         <div class="card-body">
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="card">
                         <img class="card-img-top" src="img/foto-girl.png" alt="Card image cap">
                         <div class="card-body">
@@ -198,7 +198,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="card">
                         <img class="card-img-top" src="img/foto2.png" alt="Card image cap">
                         <div class="card-body">
@@ -236,37 +236,38 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
-                    <figure><img src="img/deskorolka.png" alt=""></figure>
+                <div class="col-md-4 work-col">
+                    <figure><img src="img/deskorolka.png" alt="">
+                    <i class="fas fa-2x fa-plus"></i><div class="item">PARTNERSHIP GUIDLINES</div></figure>
                 </div>
-                <div class="col-md-4"><img src="img/droga.png" alt="">
-                    <figure></figure>
+                <div class="col-md-4 work-col">
+                    <figure><img src="img/droga.png" alt=""> <i class="fas fa-2x fa-plus"></i><div class="item">PARTNERSHIP GUIDLINES</div></figure>
                 </div>
-                <div class="col-md-4">
-                    <figure><img src="img/deskorolka.png" alt=""></figure>
+                <div class="col-md-4 work-col">
+                    <figure><img src="img/deskorolka.png" alt=""> <i class="fas fa-2x fa-plus"></i><div class="item">PARTNERSHIP GUIDLINES</div></figure>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
-                    <figure><img src="img/statki.png" alt=""></figure>
+                <div class="col-md-4 work-col">
+                    <figure><img src="img/statki.png" alt=""><i class="fas fa-2x fa-plus"></i><div class="item">PARTNERSHIP GUIDLINES</div></figure>
                 </div>
-                <div class="col-md-4"><img src="img/ptak.png" alt="">
-                    <figure></figure>
+                <div class="col-md-4 work-col">
+                    <figure><img src="img/ptak.png" alt=""> <i class="fas fa-2x fa-plus"></i><div class="item">PARTNERSHIP GUIDLINES</div></figure>
                 </div>
-                <div class="col-md-4">
-                    <figure><img src="img/gory.png" alt=""></figure>
+                <div class="col-md-4 work-col">
+                    <figure><img src="img/gory.png" alt=""> <i class="fas fa-2x fa-plus"></i><div class="item">PARTNERSHIP GUIDLINES</div></figure>
                 </div>
             </div>
 
             <div class="row" id="more">
-                <div class="col-md-4">
-                    <figure><img src="img/statki.png" alt=""></figure>
+                <div class="col-md-4 work-col">
+                    <figure><img src="img/statki.png" alt=""> <i class="fas fa-2x fa-plus"></i><div class="item">PARTNERSHIP GUIDLINES</div></figure>
                 </div>
-                <div class="col-md-4"><img src="img/ptak.png" alt="">
-                    <figure></figure>
+                <div class="col-md-4 work-col">
+                    <figure><img src="img/ptak.png" alt=""> <i class="fas fa-2x fa-plus"></i><div class="item">PARTNERSHIP GUIDLINES</div></figure>
                 </div>
-                <div class="col-md-4">
-                    <figure><img src="img/gory.png" alt=""></figure>
+                <div class="col-md-4 work-col">
+                    <figure><img src="img/gory.png" alt=""> <i class="fas fa-2x fa-plus"></i><div class="item">PARTNERSHIP GUIDLINES</div></figure>
                 </div>
             </div>
 
@@ -334,17 +335,17 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 work2">
                     <figure><img src="img/traktor.png" alt=""></figure>
                     <h5>Product Design: Eames Chairs</h5>
                     <p>Eames designs are certainly iconic. Everyone of us know at least two or three of their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</p>
                 </div>
-                <div class="col-md-4"><img src="img/bike.png" alt="">
-                    <figure></figure>
+                <div class="col-md-4 work2">
+                    <figure><img src="img/bike.png" alt=""></figure>
                     <h5>Elegant and Colorful Logos</h5>
                     <p>I’ve always found logo design to be one of the most challenging things to get right. There’s so much that a logo can say about a brand without actually saying it.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 work2">
                     <figure><img src="img/lake.png" alt=""></figure>
                     <h5>A Showcase of Creative</h5>
                     <p>It’s always interesting to see another designer’s take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
