commit new rwd menu

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     </nav>
 
+   <!--carousel-->
     <!--carousel-->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
