--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
+
 </head>
 
 <body>
@@ -16,74 +19,58 @@
     <nav class="main-nav">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-sm-12">
+                <div class="col-sm-4">
                     <figure><img src="img/modest@1X.png" alt=""></figure>
+                    <span class="nav-mobile"><i class="fas fa-2x fa-bars"></i></span>
                 </div>
-                <div class="col-md-4 col-sm-12">
-                    <ul>
-                        <li>
-                            <a href="">HOME</a>
-
+                <div class="col-sm-8">
+                    <ul class="mobile-ul">
+                        <li class="active">
+                            <a href="" >HOME</a>
                         </li>
-                        <li>
-                            <a href="">WORK</a>
-                        </li>
-                        <li> <a href="">TEAM</a>
-                        </li>
-                        <li> <a href="">SERVICES</a>
-                        </li>
-                        <li><a href="">FEATURES</a>
-                        </li>
-                        <li><a href="">CONTACT</a></li>
+                        <li> <a href="">ABOUT</a></li>
+                        <li> <a href="">WORK</a></li>
+                        <li> <a href="">TEAM</a></li>
+                        <li> <a href="">SERVICES</a></li>
+                        <li><a href="">FEATURES</a></li>
+                        <li> <a href="">CONTACT</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4 col-sm-12" id="nav-mobile"><i class="fas fa-2x fa-bars"></i></div>
             </div>
         </div>
 
     </nav>
-    <header>
-        <!--carousel-->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/pic@1X.png" alt="First slide">
 
+    <!--carousel-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="img/pic@1X.png" alt="First slide">
+                <div class="jumbotron">
+                    <h1 class="display-4">WELCOME TO OUR MARKETPLACE</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum inventore veritatis dolorem itaque excepturi!</p>
+
+                    <p class="lead">
+                        <a class="btn btn-primary btn-lg" href="#" role="button">VIEW MORE</a> <a class="btn btn-primary btn-lg" href="#" role="button">VIEW TOUR</a>
+                    </p>
                 </div>
-
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-        </div>
-
-        <div class="container ">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="jumb">
-                        <h1 class="display-4">WELCOME TO OUR MARKETPLACE</h1>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum inventore veritatis dolorem itaque excepturi!</p>
-
-                        <p class="lead">
-                            <a class="btn btn-primary btn-lg" href="#" role="button">VIEW MORE</a> <a class="btn btn-primary btn-lg" href="#" role="button">VIEW TOUR</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </header>
-
+    </div>
 
     <!--section MAIN_CONTENT-->
 
