--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                 </div>
                 <div class="col-md-6">
                     <div class="content">
-                        <figure class="green-content">01</figure>
+                       <div><figure class="green-content">01</figure></div>
+                        
                         <div class="groupHp">
                             <h4>DEDICATION TO THE CUSTOMERS
 
@@ -109,7 +110,7 @@
                         </div>
                     </div>
                     <div class="content">
-                        <figure class="green-content">02</figure>
+                       <div><figure class="green-content">02</figure></div> 
                         <div class="groupHp">
                             <h4>WORKING CLOSELY WITH OUR CLIENTS
 
@@ -118,7 +119,8 @@
                         </div>
                     </div>
                     <div class="content">
-                        <figure class="green-content">03</figure>
+                       <div><figure class="green-content">03</figure></div>
+                        
                         <div class="groupHp">
                             <h4>INCERASE HAPPINESS
 
