--- a/index.html
+++ b/index.html
@@ -311,37 +311,37 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col"><i class="fas fa-3x fa-cogs"></i>
+                <div class="col-md-3 col-sm-6 col-xs-12"><i class="fas fa-3x fa-cogs"></i>
                     <h5>EASY THEME SETUP</h5>
                     <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
                 </div>
-                <div class="col"><i class="fas fa-3x fa-pencil-alt"></i>
+                <div class="col-md-3 col-sm-6 col-xs-12"><i class="fas fa-3x fa-pencil-alt"></i>
                     <h5>PIXEL PERFECT</h5>
                     <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
                 </div>
-                <div class="col"><i class="fas fa-3x fa-mobile-alt"></i>
+                <div class="col-md-3 col-sm-6 col-xs-12"><i class="fas fa-3x fa-mobile-alt"></i>
                     <h5>RESPONSIVE DISPLAY</h5>
                     <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
                 </div>
-                <div class="col"><i class="far fa-3x fa-clock"></i>
+                <div class="col-md-3 col-sm-6 col-xs-12"><i class="far fa-3x fa-clock"></i>
                     <h5>24/7 SUPPORT</h5>
                     <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col"><i class="fas fa-3x fa-cogs"></i>
+                <div class="col-md-3 col-sm-6 col-xs-12"><i class="fas fa-3x fa-cogs"></i>
                     <h5>EASY THEME SETUP</h5>
                     <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
                 </div>
-                <div class="col"><i class="fas fa-3x fa-pencil-alt"></i>
+                <div class="col-md-3 col-sm-6 col-xs-12"><i class="fas fa-3x fa-pencil-alt"></i>
                     <h5>PIXEL PERFECT</h5>
                     <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
                 </div>
-                <div class="col"><i class="fas fa-3x fa-mobile-alt"></i>
+                <div class="col-md-3 col-sm-6 col-xs-12"><i class="fas fa-3x fa-mobile-alt"></i>
                     <h5>RESPONSIVE DISPLAY</h5>
                     <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
                 </div>
-                <div class="col"><i class="far fa-3x fa-clock"></i>
+                <div class="col-md-3 col-sm-6 col-xs-12"><i class="far fa-3x fa-clock"></i>
                     <h5>24/7 SUPPORT</h5>
                     <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
                 </div>
@@ -426,11 +426,11 @@
 
     <section class="author">
         <div class="container">
-            <div class="row">
-                <div class="col">
+            <div class="row align-items-center">
+                <div class="col-md-6 col-sm-12">
                     <p>© Copyright 2014 by PSD Booster. All Rights Reserved.</p>
                 </div>
-                <div class="col"><a href=""><i class="fab fa-twitter"></i></a>
+                <div class="col-md-6 col-sm-12" id="author-fa"><a href=""><i class="fab fa-twitter"></i></a>
                     <a href=""><i class="fab fa-facebook-f"></i></a>
                     <a href=""><i class="fab fa-skype"></i></a>
                     <a href=""><i class="fab fa-behance"></i></a>
